# SEWAA-forecasts-RFE2

./: .gitignore  README.md  Train_cGAN_RFE2_Colab.ipynb  cGAN_RFE2_Progress_Update.docx
SEWAA-forecasts/: .dockerignore  .gitignore  Dockerfile  README.md  TODO.txt  auto_forecasts.py  docker-compose.yml  index.html  main.py  nginx.Dockerfile  pyproject.toml  run_forecast.py  start_forecasting.py
SEWAA-forecasts/24h_accumulations/: find_available_dates.py  forecast2histogram_7d_lowRAM.py
SEWAA-forecasts/24h_accumulations/cGAN/: FCSTNorm2018.pkl
SEWAA-forecasts/6h_accumulations/: find_available_dates.py  forecast2histogram_lowRAM.py
SEWAA-forecasts/6h_accumulations/cGAN/: FCSTNorm2018.pkl
SEWAA-forecasts/ELR/: ELR_available_dates.py  file_paths.py  helper_functions.py  plot_ELR.py  run_ELR.py
SEWAA-forecasts/cGAN_data/: elev.nc  lsm.nc
SEWAA-forecasts/configs/: forecast.yaml  nginx.conf
SEWAA-forecasts/interface/: API.html  CRPS_comparison.html  base.html  categoriesOfReliability.html  costLossRatios.html  documentation.html  ensemble_logistic_regression.html  index.html  showForecasts.html  user_guide.html
SEWAA-forecasts/shapes/: ExtractJSON.ipynb
SEWAA-forecasts/shapes/Burundi_shapes/: Burundi_region.dbf  Burundi_region.shp  Burundi_region.shx
SEWAA-forecasts/shapes/Djibouti_shapes/: Djibouti_region.dbf  Djibouti_region.shp  Djibouti_region.shx
SEWAA-forecasts/shapes/Eritrea_shapes/: Eritrea_region.dbf  Eritrea_region.shp  Eritrea_region.shx
SEWAA-forecasts/shapes/GHA_shapes/: gha.dbf  gha.sbn  gha.sbx  gha.shx
SEWAA-forecasts/shapes/Kenya_shapes/: Kenya_region.dbf  Kenya_region.sbn  Kenya_region.sbx  Kenya_region.shx
SEWAA-forecasts/shapes/Rwanda_shapes/: Rwanda_region.dbf  Rwanda_region.shp  (+1 more)
(+1148 files in other folders)
