[project]
name = "sewaa-forecasts-v2"
version = "1.2.0"
description = "Scripts for operational rainfall forecasts in the ICPAC region"
authors = [{ name = "Jason Kinyua", email = "jaysnmury@gmail.com" }]
license = { text = "CC BY 4.0" }
readme = "README.md"
requires-python = ">=3.11.0,<3.13"
dependencies = [
    "cartopy>=0.25.0",
    "cfgrib>=0.9.15.0",
    "climlab>=0.9.1",
    "dask>=2025.9.1",
    "ecmwf-api-client>=1.6.5",
    "fastapi[standard]>=0.118.0",
    "flake8>=7.3.0",
    "iris>=1.0.7",
    "jinja2>=3.1.6",
    "jupyter>=1.1.1",
    "markdown2>=2.5.4",
    "matplotlib>=3.10.6",
    "netcdf4>=1.7.2",
    "numba>=0.62.1",
    "pre-commit>=4.3.0",
    "properscoring>=0.1",
    "regionmask>=0.13.0",
    "ruff>=0.13.2",
    "schedule>=1.2.2",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "tensorflow==2.15.0",
    "tqdm>=4.67.1",
    "xarray>=2025.9.0",
    "xesmf>=0.8.10",
]


[tool.black]
line-length = 150
skip-string-normalization = true
target-version = ['py310', 'py311']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''


[tool.ruff]
# Enable pycodestyle (`E`) and Pyflakes (`F`) codes by default.
select = ["E", "F", "I"]
ignore = []
fix = true
# Same as Black.
line-length = 150
# Assume Python 3.11.
target-version = "py311"


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = [
    "6h_accumulations",
    "24h_accumulations",
    "interface",
    "ELR",
    "configs",
    "shapes",
    "cGAN_data",
]
